# Discord-Self-Nuker

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: dev.workflow.yml  main.yml
src/: main.cpp
src/modules/join/: join.cpp  join.h
src/viewModels/console/: console.cpp  console.h
src/viewModels/discord/: discord.cpp  discord.h
src/viewModels/menu/: menu.cpp  menu.h
